Harmonizing debconf-po file headers.
Signed-off-by: Daniel Baumann <daniel.baumann@progress-linux.org>

--- a/debian/po/ca.po
+++ b/debian/po/ca.po
@@ -1,7 +1,6 @@
-# mdadm Catalan translation.
-# Copyright (C) 2004-2006 Software in the Public Interest
-# This file is distributed under the same license as the squid package.
-# Innocent De Marchi <tangram.peces@gmail.com>, 2011.
+# Catalan debconf translation of mdadm
+# Copyright (C) 2011 Innocent De Marchi <tangram.peces@gmail.com>
+# This file is distributed under the same license as the mdadm package.
 #
 msgid ""
 msgstr ""
@@ -15,8 +14,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Catalan\n"
-"X-Poedit-Country: SPAIN\n"
 
 #. Type: boolean
 #. Description
