--- a/debian/po/fi.po
+++ b/debian/po/fi.po
@@ -1,3 +1,7 @@
+# Finnish debconf translation of mdadm
+# Copyright (C) 2020 Ari Ervasti <ari.ervasti87@gmail.com>
+# This file is distributed under the same license as the mdadm package.
+
 msgid ""
 msgstr ""
 "Project-Id-Version: mdadm\n"
@@ -10,7 +14,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.3\n"
 
 #. Type: boolean
 #. Description
