--- a/debian/po/fr.po
+++ b/debian/po/fr.po
@@ -1,12 +1,10 @@
-# Translation of mdadm debconf templates to French
-# Copyright (C) 2008 Florentin Duneau <fduneau@gmail.com>
-# This file is distributed under the same license as the lurker package.
+# French debconf translation of mdadm
+# Copyright (C) 2005-2006 Éric Madesclair <eric-m@wanadoo.fr>
+# Copyright (C) 2006 Jean-Luc Coulon (f5ibh) <jean-luc.coulon@wanadoo.fr>
+# Copyright (C) 2006-2008 Florentin Duneau <fduneau@gmail.com>
+# Copyright (C) 2019 Grégoire Scano <gregoire.scano@malloc.fr>, 2019.
+# This file is distributed under the same license as the mdadm package.
 #
-#
-# Éric Madesclair <eric-m@wanadoo.fr>, 2005, 2006.
-# Jean-Luc Coulon (f5ibh) <jean-luc.coulon@wanadoo.fr>, 2006.
-# Florentin Duneau <fduneau@gmail.com>, 2006, 2007, 2008.
-# Grégoire Scano <gregoire.scano@malloc.fr>, 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: mdadm\n"
@@ -20,7 +18,6 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms:  nplurals=2; plural=(n > 1);\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. Type: boolean
 #. Description
