--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -1,7 +1,6 @@
-# Italian (it) translation of debconf templates for mdadm
-# Copyright (C) 2008 Software in the Public Interest
+# Italian debconf translation of mdadm
+# Copyright (C) 2008-2020 Luca Monducci <luca.mo@tiscali.it>
 # This file is distributed under the same license as the mdadm package.
-# Luca Monducci <luca.mo@tiscali.it>, 2008-2020.
 #
 msgid ""
 msgstr ""
