--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -1,14 +1,7 @@
-# Dutch translation for the configuration of mdadm
-#
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#
-# Frans Pop <aragorn@tiscali.nl>, 2005, 2006.
-# Frans Pop <elendil@planet.nl>, 2008.
-# Maarten <Maarten@posteo.de>, 2019.
+# Dutch debconf translation of mdadm
+# Copyright (C) 2005-2008 Frans Pop <elendil@planet.nl>
+# Copyright (C) 2019 Maarten <Maarten@posteo.de>
+# This file is distributed under the same license as the mdadm package.
 #
 msgid ""
 msgstr ""
@@ -22,7 +15,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
 
 # Zie voor mijn notatie het artikel over 'disk array' in de Engelse Wikipedia. Zie ook het artikel over 'Disk-Array' in de Duitse Wikipedia. De Duitsers vertalen 'disk' dus niet naar 'Festplatte'.
 #. Type: boolean
