--- a/debian/po/ru.po
+++ b/debian/po/ru.po
@@ -1,17 +1,7 @@
-# translation of ru.po to Russian
+# Russian debconf translation of mdadm
+# Copyright (C) 2006-2020 Yuri Kozlov <yuray@komyakino.ru>
+# This file is distributed under the same license as the mdadm package.
 #
-#    Translators, if you are not familiar with the PO format, gettext
-#    documentation is worth reading, especially sections dedicated to
-#    this format, e.g. by running:
-#         info -n '(gettext)PO Files'
-#         info -n '(gettext)Header Entry'
-#    Some information specific to po-debconf are available at
-#            /usr/share/doc/po-debconf/README-trans
-#         or http://www.debian.org/intl/l10n/po-debconf/README-trans#
-#    Developers do not need to manually edit POT or PO files.
-#
-# Yuri Kozlov <kozlov.y@gmail.com>, 2006, 2008.
-# Yuri Kozlov <yuray@komyakino.ru>, 2020.
 msgid ""
 msgstr ""
 "Project-Id-Version: 4.1-6\n"
@@ -24,7 +14,6 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 20.04.3\n"
 "Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
