--- a/debian/po/vi.po
+++ b/debian/po/vi.po
@@ -1,6 +1,6 @@
-# Vietnamese Translation for mdadm.
-# Copyright © 2008 Free Software Foundation, Inc.
-# Clytie Siddall <clytie@riverland.net.au>, 2005-2008.
+# Vietnamese debconf translation of mdadm
+# Copyright (C) 2005-2008 Clytie Siddall <clytie@riverland.net.au>
+# This file is distributed under the same license as the mdadm package.
 #
 msgid ""
 msgstr ""
@@ -15,7 +15,6 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: LocFactoryEditor 1.7b3\n"
 
 #. Type: boolean
 #. Description
