--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mdadm (4.2+20230508-2) sid; urgency=medium
+
+  * Uploading to sid.
+  * Uploading without changes after bookworm release.
+
+ -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sun, 11 Jun 2023 14:32:19 +0200
+
 mdadm (4.2+20230508-1) experimental; urgency=medium
 
   * Uploading to experimental.
