--- a/debian/po/cs.po
+++ b/debian/po/cs.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-09 08:48+0100\n"
+"POT-Creation-Date: 2023-06-18 07:24+0200\n"
 "PO-Revision-Date: 2020-10-18 16:52+0200\n"
 "Last-Translator: Miroslav Kure <kurem@debian.cz>\n"
 "Language-Team: Czech <debian-l10n-czech@lists.debian.org>\n"
@@ -15,15 +15,38 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. Type: boolean
+#. Type: note
 #. Description
 #: ../mdadm.templates:2001
+msgid "no systemd init-system detected"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"The root filesystem of this system was detected to be on a RAID device, so "
+"mdadm might be required to run during boot to properly start your system."
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"Beginning with newer versions of the mdadm package, init-system integration "
+"is available for systemd only. This system seems to use an alternative init-"
+"system which might or might not leave your system unbootable."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../mdadm.templates:3001
 msgid "Should mdadm run monthly redundancy checks of the MD arrays?"
 msgstr "Má mdadm spouštět měsíční kontroly redundance MD polí?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid ""
 "If the kernel supports it (versions greater than 2.6.14), mdadm can "
 "periodically check the redundancy of MD arrays (RAIDs). This may be a "
@@ -41,7 +64,7 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid ""
 "The default, if turned on, is to check on the first Sunday of every month at "
 "01:06."
@@ -51,29 +74,29 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid "Should mdadm check once a day for degraded arrays?"
 msgstr "Má mdadm jednou denně zjišťovat degradovaná pole?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid ""
 "mdadm can check once a day for degraded arrays and missing spares to ensure "
 "that such events don't go unnoticed."
 msgstr ""
-"mdadm může jednou denně zjišťovat degradovaná pole a chybějící "
-"náhradní disky, aby zaručil, že tyto události neprojdou bez povšimnutí."
+"mdadm může jednou denně zjišťovat degradovaná pole a chybějící náhradní "
+"disky, aby zaručil, že tyto události neprojdou bez povšimnutí."
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Do you want to start the MD monitoring daemon?"
 msgstr "Chcete spustit daemon pro monitorování MD?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid ""
 "The MD (RAID) monitor daemon sends email notifications in response to "
 "important MD events (such as a disk failure)."
@@ -83,19 +106,19 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Enabling this option is recommended."
 msgstr "Povolení této možnosti je doporučeno."
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid "Recipient for email notifications:"
 msgstr "Příjemce emailových upozornění:"
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid ""
 "Please enter the email address of the user who should get the email "
 "notifications for important MD events."
