--- a/debian/po/eu.po
+++ b/debian/po/eu.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm-debconf\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-09 08:48+0100\n"
+"POT-Creation-Date: 2023-06-18 07:24+0200\n"
 "PO-Revision-Date: 2020-09-21 17:06+0100\n"
 "Last-Translator: Inaki Larranaga Murgoitio <dooteo@zundan.com>, 2020\n"
 "Language-Team: Euskara <debian-l10n-basque@lists.debian.org>\n"
@@ -16,16 +16,38 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. Type: boolean
+#. Type: note
 #. Description
 #: ../mdadm.templates:2001
-msgid "Should mdadm run monthly redundancy checks of the MD arrays?"
+msgid "no systemd init-system detected"
 msgstr ""
-"mdadm-ek hilabetero MD matrizen erredundantzia egiaztatu behar du?"
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"The root filesystem of this system was detected to be on a RAID device, so "
+"mdadm might be required to run during boot to properly start your system."
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"Beginning with newer versions of the mdadm package, init-system integration "
+"is available for systemd only. This system seems to use an alternative init-"
+"system which might or might not leave your system unbootable."
+msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
+msgid "Should mdadm run monthly redundancy checks of the MD arrays?"
+msgstr "mdadm-ek hilabetero MD matrizen erredundantzia egiaztatu behar du?"
+
+#. Type: boolean
+#. Description
+#: ../mdadm.templates:3001
 msgid ""
 "If the kernel supports it (versions greater than 2.6.14), mdadm can "
 "periodically check the redundancy of MD arrays (RAIDs). This may be a "
@@ -37,14 +59,14 @@ msgstr ""
 "Kernelak onartzen badu (2.6.14 baino bertsio berriagoak), mdadm-ek MD "
 "matrizen (RAID-en) erredundantzia aldiro egiazta dezake. Konfigurazio "
 "lokalaren arabera baliabide-eskakizun handiko prozesu bat izan daitekeen "
-"arren datu galera kasuak saihesten lagundu dezake. Kontutan izan "
-"irakur-soileko egiaztapena dela errorerik aurkitu ezean; bestela, erroreeak "
+"arren datu galera kasuak saihesten lagundu dezake. Kontutan izan irakur-"
+"soileko egiaztapena dela errorerik aurkitu ezean; bestela, erroreeak "
 "aurkituz gero, mdadm-ek hauek konpontzen saiatuko da, horretarako euskarria "
 "idazketa moduan atzitu behar izan dezakeelarik."
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid ""
 "The default, if turned on, is to check on the first Sunday of every month at "
 "01:06."
@@ -54,13 +76,13 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid "Should mdadm check once a day for degraded arrays?"
 msgstr "mdadm-ek degradatutako matrizeak egunean behin egiaztatuko ditu?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid ""
 "mdadm can check once a day for degraded arrays and missing spares to ensure "
 "that such events don't go unnoticed."
@@ -70,35 +92,35 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Do you want to start the MD monitoring daemon?"
 msgstr "MD monitorizazio-daemona abiarazi nahi duzu?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid ""
 "The MD (RAID) monitor daemon sends email notifications in response to "
 "important MD events (such as a disk failure)."
 msgstr ""
-"MD (RAID) monitorizazio-daemonak mezu elektronikoak bidaltzen ditu "
-"MD gertaera (adib. diskoen erroreak) garrantzitsuetaz berri emanez."
+"MD (RAID) monitorizazio-daemonak mezu elektronikoak bidaltzen ditu MD "
+"gertaera (adib. diskoen erroreak) garrantzitsuetaz berri emanez."
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Enabling this option is recommended."
 msgstr "Aukera hau gaitzea gomendatzen da."
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid "Recipient for email notifications:"
 msgstr "Jakinarazpenen hartzailearen helb. eletronikoa:"
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid ""
 "Please enter the email address of the user who should get the email "
 "notifications for important MD events."
