--- a/debian/po/it.po
+++ b/debian/po/it.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm italian debconf\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-09 08:48+0100\n"
+"POT-Creation-Date: 2023-06-18 07:24+0200\n"
 "PO-Revision-Date: 2020-09-16 20:02+0200\n"
 "Last-Translator: Luca Monducci <luca.mo@tiscali.it>\n"
 "Language-Team: Italian <debian-l10n-italian@lists.debian.org>\n"
@@ -15,15 +15,38 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#. Type: boolean
+#. Type: note
 #. Description
 #: ../mdadm.templates:2001
+msgid "no systemd init-system detected"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"The root filesystem of this system was detected to be on a RAID device, so "
+"mdadm might be required to run during boot to properly start your system."
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"Beginning with newer versions of the mdadm package, init-system integration "
+"is available for systemd only. This system seems to use an alternative init-"
+"system which might or might not leave your system unbootable."
+msgstr ""
+
+#. Type: boolean
+#. Description
+#: ../mdadm.templates:3001
 msgid "Should mdadm run monthly redundancy checks of the MD arrays?"
 msgstr "Far eseguire a mdadm i controlli mensili di ridondanza sugli array MD?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid ""
 "If the kernel supports it (versions greater than 2.6.14), mdadm can "
 "periodically check the redundancy of MD arrays (RAIDs). This may be a "
@@ -42,7 +65,7 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid ""
 "The default, if turned on, is to check on the first Sunday of every month at "
 "01:06."
@@ -52,30 +75,29 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid "Should mdadm check once a day for degraded arrays?"
 msgstr "Far eseguire a mdadm il controllo quotidiano di degrado degli array?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid ""
 "mdadm can check once a day for degraded arrays and missing spares to ensure "
 "that such events don't go unnoticed."
 msgstr ""
-"mdadm può controllare una volta al giorno il degrado degli array e "
-"l'assenza dei dischi di scorta in modo che questi eventi non passino "
-"inosservati."
+"mdadm può controllare una volta al giorno il degrado degli array e l'assenza "
+"dei dischi di scorta in modo che questi eventi non passino inosservati."
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Do you want to start the MD monitoring daemon?"
 msgstr "Avviare il demone di monitoraggio MD?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid ""
 "The MD (RAID) monitor daemon sends email notifications in response to "
 "important MD events (such as a disk failure)."
@@ -85,19 +107,19 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Enabling this option is recommended."
 msgstr "Si raccomanda l'attivazione di questa funzione."
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid "Recipient for email notifications:"
 msgstr "Destinatario delle email di notifica:"
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid ""
 "Please enter the email address of the user who should get the email "
 "notifications for important MD events."
