--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm 4.2-5\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2019-02-09 08:48+0100\n"
+"POT-Creation-Date: 2023-06-18 07:24+0200\n"
 "PO-Revision-Date: 2023-03-08 10:28+0100\n"
 "Last-Translator: Remus-Gabriel Chelu <remusgabriel.chelu@disroot.org>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
@@ -14,13 +14,36 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n==0 || (n!=1 && n%100>=1 && "
-"n%100<=19) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n==0 || (n!=1 && n%100>=1 && n"
+"%100<=19) ? 1 : 2);\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid "no systemd init-system detected"
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"The root filesystem of this system was detected to be on a RAID device, so "
+"mdadm might be required to run during boot to properly start your system."
+msgstr ""
+
+#. Type: note
+#. Description
+#: ../mdadm.templates:2001
+msgid ""
+"Beginning with newer versions of the mdadm package, init-system integration "
+"is available for systemd only. This system seems to use an alternative init-"
+"system which might or might not leave your system unbootable."
+msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid "Should mdadm run monthly redundancy checks of the MD arrays?"
 msgstr ""
 "Doriți ca «mdadm» să efectueze verificări lunare de redundanță ale "
@@ -28,27 +51,27 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid ""
 "If the kernel supports it (versions greater than 2.6.14), mdadm can "
-"periodically check the redundancy of MD arrays (RAIDs). This may be a resource-"
-"intensive process, depending on the local setup, but it could help prevent rare "
-"cases of data loss. Note that this is a read-only check unless errors are "
-"found; if errors are found, mdadm will try to correct them, which may result in "
-"write access to the media."
+"periodically check the redundancy of MD arrays (RAIDs). This may be a "
+"resource-intensive process, depending on the local setup, but it could help "
+"prevent rare cases of data loss. Note that this is a read-only check unless "
+"errors are found; if errors are found, mdadm will try to correct them, which "
+"may result in write access to the media."
 msgstr ""
 "Dacă nucleul acceptă această operație (versiunile mai mari decât 2.6.14), "
 "«mdadm» poate verifica periodic redundanța ansamblurilor de discuri multiple "
-"(RAID = Redundant Array of Independent Disks). Acesta poate fi un proces care "
-"necesită multe resurse, în funcție de configurația locală, dar ar putea ajuta "
-"la prevenirea cazurilor rare de pierdere de date. Rețineți că aceasta este o "
-"verificare numai în citire, cu excepția cazului în care sunt găsite erori; dacă "
-"se găsesc erori, «mdadm» va încerca să le corecteze, ceea ce poate conduce la "
-"un acces de scriere pe mediile de stocare (discuri)."
+"(RAID = Redundant Array of Independent Disks). Acesta poate fi un proces "
+"care necesită multe resurse, în funcție de configurația locală, dar ar putea "
+"ajuta la prevenirea cazurilor rare de pierdere de date. Rețineți că aceasta "
+"este o verificare numai în citire, cu excepția cazului în care sunt găsite "
+"erori; dacă se găsesc erori, «mdadm» va încerca să le corecteze, ceea ce "
+"poate conduce la un acces de scriere pe mediile de stocare (discuri)."
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:2001
+#: ../mdadm.templates:3001
 msgid ""
 "The default, if turned on, is to check on the first Sunday of every month at "
 "01:06."
@@ -58,7 +81,7 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid "Should mdadm check once a day for degraded arrays?"
 msgstr ""
 "Doriți ca «mdadm» să verifice o dată pe zi pentru ansambluri de discuri "
@@ -66,7 +89,7 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:3001
+#: ../mdadm.templates:4001
 msgid ""
 "mdadm can check once a day for degraded arrays and missing spares to ensure "
 "that such events don't go unnoticed."
@@ -77,39 +100,40 @@ msgstr ""
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Do you want to start the MD monitoring daemon?"
 msgstr "Doriți să porniți demonul de monitorizare de discuri-multiple „MD”?"
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid ""
-"The MD (RAID) monitor daemon sends email notifications in response to important "
-"MD events (such as a disk failure)."
+"The MD (RAID) monitor daemon sends email notifications in response to "
+"important MD events (such as a disk failure)."
 msgstr ""
-"Demonul de monitorizare de discuri multiple „MD” (RAID) trimite notificări prin "
-"e-mail ca răspuns la evenimente importante în discurile multiple „MD” (cum ar "
-"fi o eroare de disc)."
+"Demonul de monitorizare de discuri multiple „MD” (RAID) trimite notificări "
+"prin e-mail ca răspuns la evenimente importante în discurile multiple "
+"„MD” (cum ar fi o eroare de disc)."
 
 #. Type: boolean
 #. Description
-#: ../mdadm.templates:4001
+#: ../mdadm.templates:5001
 msgid "Enabling this option is recommended."
 msgstr "Se recomandă activarea acestei opțiuni."
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid "Recipient for email notifications:"
 msgstr "Destinatarul notificărilor prin e-mail:"
 
 #. Type: string
 #. Description
-#: ../mdadm.templates:5001
+#: ../mdadm.templates:6001
 msgid ""
 "Please enter the email address of the user who should get the email "
 "notifications for important MD events."
 msgstr ""
 "Introduceți adresa de e-mail a utilizatorului care ar trebui să primească "
-"notificări prin e-mail pentru evenimentele de discuri multiple „MD” importante."
+"notificări prin e-mail pentru evenimentele de discuri multiple „MD” "
+"importante."
