--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mdadm (4.2+20230508-4) sid; urgency=medium
+
+  * Uploading to sid.
+  * Updating watch file.
+
+ -- Daniel Baumann <daniel.baumann@progress-linux.org>  Sun, 25 Jun 2023 16:26:53 +0200
+
 mdadm (4.2+20230508-3) experimental; urgency=medium
 
   * Uploading to experimental.
