--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -4,25 +4,25 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: mdadm 4.2-5\n"
+"Project-Id-Version: mdadm 4.2+20230508-4\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
 "POT-Creation-Date: 2023-06-18 07:24+0200\n"
-"PO-Revision-Date: 2023-03-08 10:28+0100\n"
+"PO-Revision-Date: 2023-06-27 22:27+0200\n"
 "Last-Translator: Remus-Gabriel Chelu <remusgabriel.chelu@disroot.org>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n==0 || (n!=1 && n%100>=1 && n"
-"%100<=19) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n==0 || (n!=1 && n%100>=1 && "
+"n%100<=19) ? 1 : 2);\n"
 "X-Bugs: Report translation errors to the Language-Team address.\n"
 
 #. Type: note
 #. Description
 #: ../mdadm.templates:2001
 msgid "no systemd init-system detected"
-msgstr ""
+msgstr "nu a fost detectat sistemul de inițiere (init) „systemd”"
 
 #. Type: note
 #. Description
@@ -31,6 +31,9 @@ msgid ""
 "The root filesystem of this system was detected to be on a RAID device, so "
 "mdadm might be required to run during boot to properly start your system."
 msgstr ""
+"Sistemul de fișiere rădăcină al acestui sistem a fost detectat ca fiind pe un "
+"dispozitiv RAID, astfel încât este posibil ca «mdadm» să fie necesar să "
+"ruleze în timpul pornirii pentru a porni corect sistemul."
 
 #. Type: note
 #. Description
@@ -40,6 +43,10 @@ msgid ""
 "is available for systemd only. This system seems to use an alternative init-"
 "system which might or might not leave your system unbootable."
 msgstr ""
+"Începând cu versiunile mai noi ale pachetului „mdadm”, integrarea sistemului "
+"de inițiere (init) este disponibilă numai pentru „systemd”. Acest sistem pare "
+"să utilizeze un sistem de inițiere alternativ care ar putea sau nu să vă lase "
+"sistemul incapabil de-a porni."
 
 #. Type: boolean
 #. Description
@@ -62,12 +69,12 @@ msgid ""
 msgstr ""
 "Dacă nucleul acceptă această operație (versiunile mai mari decât 2.6.14), "
 "«mdadm» poate verifica periodic redundanța ansamblurilor de discuri multiple "
-"(RAID = Redundant Array of Independent Disks). Acesta poate fi un proces "
-"care necesită multe resurse, în funcție de configurația locală, dar ar putea "
-"ajuta la prevenirea cazurilor rare de pierdere de date. Rețineți că aceasta "
-"este o verificare numai în citire, cu excepția cazului în care sunt găsite "
-"erori; dacă se găsesc erori, «mdadm» va încerca să le corecteze, ceea ce "
-"poate conduce la un acces de scriere pe mediile de stocare (discuri)."
+"(RAID = Redundant Array of Independent Disks). Acesta poate fi un proces care "
+"necesită multe resurse, în funcție de configurația locală, dar ar putea ajuta "
+"la prevenirea cazurilor rare de pierdere de date. Rețineți că aceasta este o "
+"verificare numai în citire, cu excepția cazului în care sunt găsite erori; "
+"dacă se găsesc erori, «mdadm» va încerca să le corecteze, ceea ce poate "
+"conduce la un acces de scriere pe mediile de stocare (discuri)."
 
 #. Type: boolean
 #. Description
