--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -1,15 +1,16 @@
 # Dutch debconf translation of mdadm
 # Copyright (C) 2005-2008 Frans Pop <elendil@planet.nl>
 # Copyright (C) 2019 Maarten <Maarten@posteo.de>
+# Copyright (C) 2023 Frans Spiesschaert <Frans.Spiesschaert@yucom.be>
 # This file is distributed under the same license as the mdadm package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: mdadm 4.1-3\n"
+"Project-Id-Version: mdadm_4.2+20230508-5\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
 "POT-Creation-Date: 2023-06-18 07:24+0200\n"
-"PO-Revision-Date: 2019-09-19 22:51+0200\n"
-"Last-Translator: Maarten <Maarten@posteo.de>\n"
+"PO-Revision-Date: 2023-07-10 22:09+0200\n"
+"Last-Translator: Frans Spiesschaert <Frans.Spiesschaert@yucom.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +21,7 @@ msgstr ""
 #. Description
 #: ../mdadm.templates:2001
 msgid "no systemd init-system detected"
-msgstr ""
+msgstr "geen systemd init-systeem gedetecteerd"
 
 #. Type: note
 #. Description
@@ -29,6 +30,9 @@ msgid ""
 "The root filesystem of this system was detected to be on a RAID device, so "
 "mdadm might be required to run during boot to properly start your system."
 msgstr ""
+"Er is gedetecteerd dat het rootbestandssysteem van dit systeem zich op een "
+"RAID-apparaat bevindt. Het kan dus nodig zijn om mdadm tijdens het opstarten "
+"uit te voeren om uw systeem correct op te starten."
 
 #. Type: note
 #. Description
@@ -38,6 +42,9 @@ msgid ""
 "is available for systemd only. This system seems to use an alternative init-"
 "system which might or might not leave your system unbootable."
 msgstr ""
+"Vanaf nieuwere versies van het mdadm-pakket is init-systeemintegratie alleen "
+"beschikbaar voor systemd. Dit systeem lijkt een alternatief init-systeem te "
+"gebruiken waardoor uw systeem mogelijk niet meer kan worden opgestart."
 
 # Zie voor mijn notatie het artikel over 'disk array' in de Engelse Wikipedia. Zie ook het artikel over 'Disk-Array' in de Duitse Wikipedia. De Duitsers vertalen 'disk' dus niet naar 'Festplatte'.
 #. Type: boolean
