--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.2+20230508-7devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.2+20230508-7.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Tue, 15 Aug 2023 20:04:39 +0100
+
 mdadm (4.2+20230508-7) sid; urgency=medium
 
   * Uploading to sid.
