--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.2+20230901-1devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.2+20230901-1.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Tue, 10 Oct 2023 20:08:08 +0100
+
 mdadm (4.2+20230901-1) sid; urgency=medium
 
   * Uploading to sid.
