--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.2+20231026-1devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.2+20231026-1.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 01 Nov 2023 10:08:12 +0000
+
 mdadm (4.2+20231026-1) sid; urgency=medium
 
   * Uploading to sid.
