--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.2+20231121-1devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.2+20231121-1.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Sun, 10 Dec 2023 16:29:25 +0000
+
 mdadm (4.2+20231121-1) sid; urgency=medium
 
   * Uploading to sid.
