--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mdadm (4.2+20240118-1devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.2+20240118-1.
+  * Revert unexpected upstream change (mismerge in Debian?).
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 21 Feb 2024 07:32:19 +0000
+
 mdadm (4.2+20240118-1) sid; urgency=medium
 
   * Uploading to sid.
