--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mdadm (4.3-1) sid; urgency=medium
+
+  * Uploading to sid.
+  * Merging upstream version 4.3.
+  * Updating copyright for 2024.
+
+ -- Daniel Baumann <daniel.baumann@progress-linux.org>  Wed, 21 Feb 2024 18:13:58 +0100
+
 mdadm (4.2+20240118-1) sid; urgency=medium
 
   * Uploading to sid.
