--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.3-1devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.3-1.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 21 Feb 2024 21:55:06 +0000
+
 mdadm (4.3-1) sid; urgency=medium
 
   * Uploading to sid.
