--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.3+20240723-2devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.3+20240723-2.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Tue, 30 Jul 2024 07:26:11 +0100
+
 mdadm (4.3+20240723-2) sid; urgency=medium
 
   * Uploading to sid.
