--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+mdadm (4.3+20241202-1.1) sid; urgency=high
+
+  * Non-maintainer upload.
+  * Fix chroot detection to avoid displaying the systemd note when mdadm
+    is getting installed within d-i (Closes: #1091617).
+
+ -- Cyril Brulebois <kibi@debian.org>  Sat, 28 Dec 2024 20:46:53 +0100
+
 mdadm (4.3+20241202-1) sid; urgency=medium
 
   * Uploading to sid.
