Refreshing debconf files.
Signed-off-by: Daniel Baumann <daniel.baumann@progress-linux.org>

--- a/debian/po/de.po
+++ b/debian/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm 4.2+20231026-1\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2023-06-18 07:24+0200\n"
+"POT-Creation-Date: 2025-01-23 07:30+0100\n"
 "PO-Revision-Date: 2023-11-09 21:30+0100\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
@@ -37,10 +37,17 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../mdadm.templates:2001
+#, fuzzy
+#| msgid ""
+#| "Beginning with newer versions of the mdadm package, init-system "
+#| "integration is available for systemd only. This system seems to use an "
+#| "alternative init-system which might or might not leave your system "
+#| "unbootable."
 msgid ""
 "Beginning with newer versions of the mdadm package, init-system integration "
 "is available for systemd only. This system seems to use an alternative init-"
-"system which might or might not leave your system unbootable."
+"system which might or might not leave your system unbootable and will not "
+"run any of the maintenance jobs automatically."
 msgstr ""
 "Beginnend mit neueren Versionen des Pakets Mdadm, ist die Init-System-"
 "Integration nur noch für Systemd verfügbar. Dieses System scheint ein "
