--- a/debian/po/nl.po
+++ b/debian/po/nl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm_4.2+20230508-5\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2023-06-18 07:24+0200\n"
+"POT-Creation-Date: 2025-01-23 07:30+0100\n"
 "PO-Revision-Date: 2023-07-10 22:09+0200\n"
 "Last-Translator: Frans Spiesschaert <Frans.Spiesschaert@yucom.be>\n"
 "Language-Team: Dutch <debian-l10n-dutch@lists.debian.org>\n"
@@ -37,10 +37,17 @@ msgstr ""
 #. Type: note
 #. Description
 #: ../mdadm.templates:2001
+#, fuzzy
+#| msgid ""
+#| "Beginning with newer versions of the mdadm package, init-system "
+#| "integration is available for systemd only. This system seems to use an "
+#| "alternative init-system which might or might not leave your system "
+#| "unbootable."
 msgid ""
 "Beginning with newer versions of the mdadm package, init-system integration "
 "is available for systemd only. This system seems to use an alternative init-"
-"system which might or might not leave your system unbootable."
+"system which might or might not leave your system unbootable and will not "
+"run any of the maintenance jobs automatically."
 msgstr ""
 "Vanaf nieuwere versies van het mdadm-pakket is init-systeemintegratie alleen "
 "beschikbaar voor systemd. Dit systeem lijkt een alternatief init-systeem te "
