--- a/debian/po/ro.po
+++ b/debian/po/ro.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mdadm 4.2+20230508-4\n"
 "Report-Msgid-Bugs-To: mdadm@packages.debian.org\n"
-"POT-Creation-Date: 2023-06-18 07:24+0200\n"
+"POT-Creation-Date: 2025-01-23 07:30+0100\n"
 "PO-Revision-Date: 2023-06-27 22:27+0200\n"
 "Last-Translator: Remus-Gabriel Chelu <remusgabriel.chelu@disroot.org>\n"
 "Language-Team: Romanian <debian-l10n-romanian@lists.debian.org>\n"
@@ -31,22 +31,29 @@ msgid ""
 "The root filesystem of this system was detected to be on a RAID device, so "
 "mdadm might be required to run during boot to properly start your system."
 msgstr ""
-"Sistemul de fișiere rădăcină al acestui sistem a fost detectat ca fiind pe un "
-"dispozitiv RAID, astfel încât este posibil ca «mdadm» să fie necesar să "
+"Sistemul de fișiere rădăcină al acestui sistem a fost detectat ca fiind pe "
+"un dispozitiv RAID, astfel încât este posibil ca «mdadm» să fie necesar să "
 "ruleze în timpul pornirii pentru a porni corect sistemul."
 
 #. Type: note
 #. Description
 #: ../mdadm.templates:2001
+#, fuzzy
+#| msgid ""
+#| "Beginning with newer versions of the mdadm package, init-system "
+#| "integration is available for systemd only. This system seems to use an "
+#| "alternative init-system which might or might not leave your system "
+#| "unbootable."
 msgid ""
 "Beginning with newer versions of the mdadm package, init-system integration "
 "is available for systemd only. This system seems to use an alternative init-"
-"system which might or might not leave your system unbootable."
+"system which might or might not leave your system unbootable and will not "
+"run any of the maintenance jobs automatically."
 msgstr ""
 "Începând cu versiunile mai noi ale pachetului „mdadm”, integrarea sistemului "
-"de inițiere (init) este disponibilă numai pentru „systemd”. Acest sistem pare "
-"să utilizeze un sistem de inițiere alternativ care ar putea sau nu să vă lase "
-"sistemul incapabil de-a porni."
+"de inițiere (init) este disponibilă numai pentru „systemd”. Acest sistem "
+"pare să utilizeze un sistem de inițiere alternativ care ar putea sau nu să "
+"vă lase sistemul incapabil de-a porni."
 
 #. Type: boolean
 #. Description
@@ -69,12 +76,12 @@ msgid ""
 msgstr ""
 "Dacă nucleul acceptă această operație (versiunile mai mari decât 2.6.14), "
 "«mdadm» poate verifica periodic redundanța ansamblurilor de discuri multiple "
-"(RAID = Redundant Array of Independent Disks). Acesta poate fi un proces care "
-"necesită multe resurse, în funcție de configurația locală, dar ar putea ajuta "
-"la prevenirea cazurilor rare de pierdere de date. Rețineți că aceasta este o "
-"verificare numai în citire, cu excepția cazului în care sunt găsite erori; "
-"dacă se găsesc erori, «mdadm» va încerca să le corecteze, ceea ce poate "
-"conduce la un acces de scriere pe mediile de stocare (discuri)."
+"(RAID = Redundant Array of Independent Disks). Acesta poate fi un proces "
+"care necesită multe resurse, în funcție de configurația locală, dar ar putea "
+"ajuta la prevenirea cazurilor rare de pierdere de date. Rețineți că aceasta "
+"este o verificare numai în citire, cu excepția cazului în care sunt găsite "
+"erori; dacă se găsesc erori, «mdadm» va încerca să le corecteze, ceea ce "
+"poate conduce la un acces de scriere pe mediile de stocare (discuri)."
 
 #. Type: boolean
 #. Description
@@ -119,8 +126,8 @@ msgid ""
 "important MD events (such as a disk failure)."
 msgstr ""
 "Demonul de monitorizare de discuri multiple „MD” (RAID) trimite notificări "
-"prin e-mail ca răspuns la evenimente importante în discurile multiple "
-"„MD” (cum ar fi o eroare de disc)."
+"prin e-mail ca răspuns la evenimente importante în discurile multiple „MD” "
+"(cum ar fi o eroare de disc)."
 
 #. Type: boolean
 #. Description
