--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-2devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.4-2.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Thu, 23 Jan 2025 09:29:59 +0000
+
 mdadm (4.4-2) sid; urgency=medium
 
   * Uploading to sid.
