--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-3devuan1) unstable; urgency=medium
+
+  * Merge tag debian/4.4-3.
+
+ -- Mark Hindley <mark@hindley.org.uk>  Wed, 29 Jan 2025 06:38:47 +0000
+
 mdadm (4.4-3) sid; urgency=medium
 
   * Uploading to sid.
