--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mdadm (4.4-5) sid; urgency=medium
+
+  * Updating watch file.
+
+ -- Daniel Baumann <daniel@debian.org>  Sun, 16 Feb 2025 23:12:23 +0100
+
 mdadm (4.4-4) sid; urgency=medium
 
   * Updating vcs fields.
